objects/DMAPP__DM_Collaboration_Map_Node_Competitor__c.object
<CustomObject>
    <description>DEPRECATED - DO NOT USE</description>
    <fields>
        <fullName>DMAPP__DM_Collaboration_Map_Node__c</fullName>
        <deleteConstraint>Cascade</deleteConstraint>
        <label>DM Insight Map Node</label>
        <referenceTo>DMAPP__DM_Collaboration_Map_Node__c</referenceTo>
        <relationshipName>DM_Collaboration_Map_Node_Competitors</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DMAPP__DM_Opportunity_Competitor_Extra__c</fullName>
        <deleteConstraint>Cascade</deleteConstraint>
        <label>DM Opportunity Competitor Extra</label>
        <referenceTo>DMAPP__DM_Opportunity_Competitor_Extra__c</referenceTo>
        <relationshipName>DM_Collaboration_Map_Node_Competitors</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DMAPP__Our_Position__c</fullName>
        <label>Our Position</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Unknown</fullName>
                    <default>true</default>
                    <label>Unknown</label>
                </value>
                <value>
                    <fullName>Up</fullName>
                </value>
                <value>
                    <fullName>Equal</fullName>
                </value>
                <value>
                    <fullName>Down</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>ZZ DM Insight Map Node Competitor</label>
    <listViews>
        <fullName>DMAPP__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>DM Insight Map Node Competitor Nam</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DM Insight Map Node Competitors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>